# LiteCrypt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: EncryptDecryptWindow.cpp  EncryptDecryptWindow.h  main.cpp
